--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
 MarkupSafe==1.1.0
 more-itertools==4.2.0
-netifaces==0.10.4
+#netifaces==0.10.4
 oauthlib==3.1.0
 olefile==0.46
 pbr==5.6.0
@@ -58,7 +58,7 @@ python-http-client==3.2.6
 pytz==2019.3
 PyYAML==5.3.1
 raven==6.10.0
-reportlab==3.5.67
+#reportlab==3.5.67
 requests==2.21.0
 requests-unixsocket==0.2.0
 SecretStorage==2.3.1
@@ -73,7 +73,7 @@ sphinx-me==0.3
 ssh-import-id==5.10
 stevedore==3.3.0
 supervisor==4.1.0
-Twisted==18.9.0
+#Twisted==18.9.0
 Unidecode==1.1.1
 urllib3==1.24.3
 virtualenv==20.4.7
